--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,9 @@
     "action": {
       "default_popup": "popup.html",
       "default_icon": {
-        "16": "images/icon16.png",
-        "48": "images/icon48.png",
-        "128": "images/icon128.png"
+        "16": "images/HooHacks2025.png",
+        "48": "images/HooHacks2025.png",
+        "128": "images/HooHacks2025.png"
       }
     }
   }
